--- a/Fence/MDK-ARM/Fence.uvprojx
+++ b/Fence/MDK-ARM/Fence.uvprojx
@@ -419,11 +419,6 @@
               <FilePath>../Src/stm32f1xx_hal_msp.c</FilePath>
             </File>
             <File>
-              <FileName>delay.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\Src\delay.c</FilePath>
-            </File>
-            <File>
               <FileName>key.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Src\key.c</FilePath>
@@ -442,6 +437,11 @@
               <FileName>sys.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Src\sys.c</FilePath>
+            </File>
+            <File>
+              <FileName>time.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Src\time.c</FilePath>
             </File>
           </Files>
         </Group>
